POR/RefEdge/src/objects/Community_Invite_Attribute__c.object
<CustomObject>
    <description>Customer Reference Community (Bound 12)</description>
    <fields>
        <fullName>Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Community Invite Attributes</relationshipLabel>
        <relationshipName>Community_Invite_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Invite__c</fullName>
        <label>Community Invite</label>
        <referenceTo>Community_Invite__c</referenceTo>
        <relationshipLabel>Community Invite Attributes</relationshipLabel>
        <relationshipName>Community_Invite_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter</label>
        <referenceTo>Label__c</referenceTo>
        <relationshipLabel>Community Invite Attributes</relationshipLabel>
        <relationshipName>Community_Invite_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Community Invite Attribute</label>
    <nameField>
        <displayFormat>CIA-{0000}</displayFormat>
        <label>Community Invite Attributes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Invite Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>